--- a/tools/overlay/client.conf
+++ b/tools/overlay/client.conf
@@ -1,7 +1,11 @@
 [c1]
+ControlAddress = 10.0.1.128
+ControlPort = 8750
 Routers = r1
 Default = r1
 
 [c2]
+ControlAddress = 10.0.2.129
+ControlPort = 8750
 Routers = r1
 Default = r1
