--- a/tools/overlay/client.conf
+++ b/tools/overlay/client.conf
@@ -1,11 +1,11 @@
 [c1]
-ControlAddress = 10.0.1.128
+ControlAddress = 10.0.6.130
 ControlPort = 8295
 Routers = r1
 Default = r1
 
-[c2]
-ControlAddress = 10.0.2.129
-ControlPort = 8295
-Routers = r1
-Default = r1
+# [c2]
+# ControlAddress = 10.0.2.129
+# ControlPort = 8295
+# Routers = r1
+# Default = r1
