--- a/tools/overlay/demo.conf
+++ b/tools/overlay/demo.conf
@@ -1,16 +1,22 @@
+# [r1]
+# ControlAddress = 10.0.1.129
+# Interfaces     = ens34,ens35,ens39
+# HostInterface  = ens35
+# HostAddr       = 10.0.2.129
+# NameServer     = true
+# Route_r2       = ens39 -> ens34:r2
 [r1]
-ControlAddress = 10.0.1.129
-Interfaces     = ens34,ens35,ens39
-HostInterface  = ens35
-HostAddr       = 10.0.2.129
-NameServer     = true
-Route_r2       = ens39 -> ens34:r2
+ControlAddress = 127.0.0.1
+Interfaces = lo
+HostInterface = lo
+HostAddr = 127.0.0.1
+NameServer = true
 
-[r2]
-ControlAddress = 10.0.1.132
-Interfaces     = ens34,ens35,ens40
-HostInterface  = ens35
-HostAddr       = 10.0.6.128
-Route_r1       = ens34 -> ens39:r1
-Xcache         = true
+# [r2]
+# ControlAddress = 10.0.1.132
+# Interfaces     = ens34,ens35,ens40
+# HostInterface  = ens35
+# HostAddr       = 10.0.6.128
+# Route_r1       = ens34 -> ens39:r1
+# Xcache         = true
 
