--- a/tools/overlay/demo.conf
+++ b/tools/overlay/demo.conf
@@ -1,16 +1,10 @@
-# [r1]
-# ControlAddress = 10.0.1.129
-# Interfaces     = ens34,ens35,ens39
-# HostInterface  = ens35
-# HostAddr       = 10.0.2.129
-# NameServer     = true
-# Route_r2       = ens39 -> ens34:r2
 [r1]
-ControlAddress = 127.0.0.1
-Interfaces = lo
-HostInterface = lo
-HostAddr = 127.0.0.1
-NameServer = true
+ControlAddress = 10.0.1.129
+Interfaces     = ens34,ens35,ens39
+HostInterface  = ens35
+HostAddr       = 10.0.2.129
+NameServer     = true
+#Route_r2       = ens39 -> ens34:r2
 
 # [r2]
 # ControlAddress = 10.0.1.132
