--- a/tools/overlay/client.conf
+++ b/tools/overlay/client.conf
@@ -5,9 +5,13 @@ ControlPort = 8295
 Routers = r1
 Interfaces = ens40
 Default = r1
-ServerDag = RE AD:04f61c792990ec39f0af16c6a7c35b6807a61a63 HID:691b1cb51735f5dbbe42282b68e34f96cbfa39b2 AID:69a4e068880cd40549405dfda6e794b0c7fdf192
-# [c2]
-# ControlAddress = 10.0.2.129
-# ControlPort = 8295
-# Routers = r1
-# Default = r1
+ServerDag = RE AD:04f61c792990ec39f0af16c6a7c35b6807a61a63 HID:691b1cb51735f5dbbe42282b68e34f96cbfa39b2 AID:69a4e068880cd40549405dfda6e794b0c7fdf1924
+
+[c2]
+AID = AID:69a4e068880cd40549405dfda6e794b0c7fdf1924
+ControlAddress = 10.0.1.133
+ControlPort = 8295
+Routers = r2
+Interfaces = ens34
+Default = r2
+ServerDag = ""
