--- a/tools/overlay/client.conf
+++ b/tools/overlay/client.conf
@@ -14,4 +14,4 @@ ControlPort = 8295
 Routers = r2
 Interfaces = ens34
 Default = r2
-ServerDag = ""
+ServerDag = RE AID:69a4e068880cd40549405dfda6e794b0c7fdf192
