--- a/tools/overlay/demo2.conf
+++ b/tools/overlay/demo2.conf
@@ -4,7 +4,7 @@ Interfaces     = ens35,ens39,ens34,ens40
 HostInterface  = ens35
 HostAddr       = 10.0.2.129
 NameServer     = true
-Route_r2       = ens39 -> ens34:r2
+#Route_r2       = ens39 -> ens34:r2
 Route_r3       = ens40 -> ens39:r3
 
 [r2]
@@ -12,7 +12,7 @@ ControlAddress = 10.0.1.132
 Interfaces     = ens39,ens40,ens34,ens41
 HostInterface  = ens39
 HostAddr       = 10.0.4.129
-Route_r1       = ens34 -> ens39:r1
+#Route_r1       = ens34 -> ens39:r1
 Route_r3       = ens41 -> ens40:r3
 
 [r3]
